syntax = "proto3";

package fileCommands;

option go_package ="aleksrosz/simple-distributed-file-system/proto";

import "google/protobuf/empty.proto";

message FileCommand {
	int32 fileCommand 	= 1;
	string fileName 		= 2;
	int32 fileSize 			= 3;
	bytes fileData 			= 4;
}

message FileResponse {
	string message = 1;
	string fileName 		= 2;
	int32 fileSize 			= 3;
	bytes fileData 			= 4;
}

service HandleFileRequestsService {
	rpc SendFileRequest (FileCommand) returns (FileResponse);
	rpc HandleFileService (FileCommand) returns (FileResponse);
}